syntax = "proto3";
package staff;
option go_package = ".;";

service StaffService {
    rpc CreateStaff(CreateStaffRequset) returns (CreateStaffResponse) {}
    rpc StaffLogin(StaffLoginRequest) returns (StaffLoginResponse) {}
}

message CreateStaffRequset {
    string name = 1;
    string password = 2;
    string hospital = 3;
    string department = 4;
    string job_number = 5;
    string id_card_number = 6;
}

message CreateStaffResponse {
    string msg = 1;
    int64 error_code = 2;
    string token = 3;
}

message StaffLoginRequest {
    string token = 1;
    string id_card_number = 2;
    string password = 3;
}

message StaffLoginResponse {
    string msg = 1;
    int64 error_code = 2;
    string token = 3;
}